scipy-cephes/protos.h

extern double j0(double x);
extern double y0(double x);
extern double j1(double x);
extern double y1(double x);
/*
 * extern int levnsn ( int n, double r[], double a[], double e[], double refl[] );
 */
extern double log(double x);